--- a/documentation/classes/InstagramAPI-Response-Model-LayoutContent.html
+++ b/documentation/classes/InstagramAPI-Response-Model-LayoutContent.html
@@ -339,7 +339,7 @@
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response-Model-LayoutContent.html#constant_JSON_PROPERTY_MAP">JSON_PROPERTY_MAP</a></th>
                     <td class="phpdocumentor-cell"></td>
-                    <td class="phpdocumentor-cell">[&#039;related_style&#039; =&gt; &#039;string&#039;, &#039;related&#039; =&gt; &#039;Tag[]&#039;, &#039;medias&#039; =&gt; &#039;SectionMedia[]&#039;, &#039;feed_type&#039; =&gt; &#039;string&#039;, &#039;fill_items&#039; =&gt; &#039;FillItems[]&#039;, &#039;explore_item_info&#039; =&gt; &#039;ExploreItemInfo&#039;, &#039;tabs_info&#039; =&gt; &#039;TabsInfo&#039;, &#039;full_item&#039; =&gt; &#039;FullItem&#039;, &#039;one_by_two_item&#039; =&gt; &#039;OneByTwoItem&#039;, &#039;two_by_two_item&#039; =&gt; &#039;TwoByTwoItem&#039;]</td>
+                    <td class="phpdocumentor-cell">[&#039;related_style&#039; =&gt; &#039;string&#039;, &#039;related&#039; =&gt; &#039;Tag[]&#039;, &#039;medias&#039; =&gt; &#039;SectionMedia[]&#039;, &#039;feed_type&#039; =&gt; &#039;string&#039;, &#039;fill_items&#039; =&gt; &#039;FillItems[]&#039;, &#039;explore_item_info&#039; =&gt; &#039;ExploreItemInfo&#039;, &#039;tabs_info&#039; =&gt; &#039;TabsInfo&#039;, &#039;full_item&#039; =&gt; &#039;FullItem&#039;, &#039;one_by_two_item&#039; =&gt; &#039;OneByTwoItem&#039;, &#039;two_by_two_item&#039; =&gt; &#039;TwoByTwoItem&#039;, &#039;three_by_four_item&#039; =&gt; &#039;ThreeByFourItem&#039;]</td>
                 </tr>
                                                                                         <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response-Model-LayoutContent.html#method_getExploreItemInfo">getExploreItemInfo()</a></th>
@@ -563,7 +563,7 @@
         <span class="phpdocumentor-signature__visibility">public</span>
         <span class="phpdocumentor-signature__type">mixed</span>
         <span class="phpdocumentor-signature__name">$JSON_PROPERTY_MAP</span>
-        = <span class="phpdocumentor-signature__default-value">[&#039;related_style&#039; =&gt; &#039;string&#039;, &#039;related&#039; =&gt; &#039;Tag[]&#039;, &#039;medias&#039; =&gt; &#039;SectionMedia[]&#039;, &#039;feed_type&#039; =&gt; &#039;string&#039;, &#039;fill_items&#039; =&gt; &#039;FillItems[]&#039;, &#039;explore_item_info&#039; =&gt; &#039;ExploreItemInfo&#039;, &#039;tabs_info&#039; =&gt; &#039;TabsInfo&#039;, &#039;full_item&#039; =&gt; &#039;FullItem&#039;, &#039;one_by_two_item&#039; =&gt; &#039;OneByTwoItem&#039;, &#039;two_by_two_item&#039; =&gt; &#039;TwoByTwoItem&#039;]</span>
+        = <span class="phpdocumentor-signature__default-value">[&#039;related_style&#039; =&gt; &#039;string&#039;, &#039;related&#039; =&gt; &#039;Tag[]&#039;, &#039;medias&#039; =&gt; &#039;SectionMedia[]&#039;, &#039;feed_type&#039; =&gt; &#039;string&#039;, &#039;fill_items&#039; =&gt; &#039;FillItems[]&#039;, &#039;explore_item_info&#039; =&gt; &#039;ExploreItemInfo&#039;, &#039;tabs_info&#039; =&gt; &#039;TabsInfo&#039;, &#039;full_item&#039; =&gt; &#039;FullItem&#039;, &#039;one_by_two_item&#039; =&gt; &#039;OneByTwoItem&#039;, &#039;two_by_two_item&#039; =&gt; &#039;TwoByTwoItem&#039;, &#039;three_by_four_item&#039; =&gt; &#039;ThreeByFourItem&#039;]</span>
     </code>
             
 </article>
