--- a/documentation/classes/InstagramAPI-Response-Model-User.html
+++ b/documentation/classes/InstagramAPI-Response-Model-User.html
@@ -3858,6 +3858,8 @@
     &#039;linked_fb_info&#039; =&gt; &#039;&#039;,
     &#039;has_password&#039; =&gt; &#039;bool&#039;,
     &#039;gating&#039; =&gt; &#039;Gating&#039;,
+    &#039;fbid_v2&#039; =&gt; &#039;string&#039;,
+    &#039;page_id_for_new_suma_biz_account&#039; =&gt; &#039;string&#039;,
 ]</td>
                 </tr>
                                                                                         <tr>
@@ -7041,6 +7043,8 @@
     &#039;linked_fb_info&#039; =&gt; &#039;&#039;,
     &#039;has_password&#039; =&gt; &#039;bool&#039;,
     &#039;gating&#039; =&gt; &#039;Gating&#039;,
+    &#039;fbid_v2&#039; =&gt; &#039;string&#039;,
+    &#039;page_id_for_new_suma_biz_account&#039; =&gt; &#039;string&#039;,
 ]</span>
     </code>
             
