--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -199,8 +199,8 @@
                     <li><a href="../files/src-response-closefriendsresponse.html"><abbr title="src/Response/CloseFriendsResponse.php">CloseFriendsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-cluster.html"><abbr title="src/Response/Model/Cluster.php">Cluster.php</abbr></a></li>
                     <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-collectionfeedresponse.html"><abbr title="src/Response/CollectionFeedResponse.php">CollectionFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-commandinterface.html"><abbr title="src/Realtime/CommandInterface.php">CommandInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-comment.html"><abbr title="src/Response/Model/Comment.php">Comment.php</abbr></a></li>
@@ -236,8 +236,8 @@
                     <li><a href="../files/src-response-createhighlightresponse.html"><abbr title="src/Response/CreateHighlightResponse.php">CreateHighlightResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createliveresponse.html"><abbr title="src/Response/CreateLiveResponse.php">CreateLiveResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createserieresponse.html"><abbr title="src/Response/CreateSerieResponse.php">CreateSerieResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
                     <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
+                    <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
                 </ul>
                                     <h3>D</h3>
         <ul class="phpdocumentor-list">
@@ -378,8 +378,8 @@
                     <li><a href="../files/src-realtime-handler-handlerexception.html"><abbr title="src/Realtime/Handler/HandlerException.php">HandlerException.php</abbr></a></li>
                     <li><a href="../files/src-realtime-handlerinterface.html"><abbr title="src/Realtime/HandlerInterface.php">HandlerInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-hasinteropupgradedresponse.html"><abbr title="src/Response/HasInteropUpgradedResponse.php">HasInteropUpgradedResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtagfollow.html"><abbr title="src/Response/Model/HashtagFollow.php">HashtagFollow.php</abbr></a></li>
                     <li><a href="../files/src-response-hashtagsresponse.html"><abbr title="src/Response/HashtagsResponse.php">HashtagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-headline.html"><abbr title="src/Response/Model/Headline.php">Headline.php</abbr></a></li>
@@ -394,8 +394,8 @@
                     <li><a href="../files/src-response-model-ioslinks.html"><abbr title="src/Response/Model/IOSLinks.php">IOSLinks.php</abbr></a></li>
                     <li><a href="../files/src-response-model-iabautofilloptoutinfo.html"><abbr title="src/Response/Model/IabAutofillOptoutInfo.php">IabAutofillOptoutInfo.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-ieforcesetnewpasswordformexception.html"><abbr title="src/Exception/Checkpoint/IeForceSetNewPasswordFormException.php">IeForceSetNewPasswordFormException.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-imagecandidate.html"><abbr title="src/Response/Model/ImageCandidate.php">ImageCandidate.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image-versions2.html"><abbr title="src/Response/Model/Image_Versions2.php">Image_Versions2.php</abbr></a></li>
                     <li><a href="../files/src-response-model-in.html"><abbr title="src/Response/Model/In.php">In.php</abbr></a></li>
@@ -495,6 +495,9 @@
                     <li><a href="../files/src-response-multiaccountsresponse.html"><abbr title="src/Response/MultiAccountsResponse.php">MultiAccountsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-multipleaccountfamilyresponse.html"><abbr title="src/Response/MultipleAccountFamilyResponse.php">MultipleAccountFamilyResponse.php</abbr></a></li>
                     <li><a href="../files/src-request-music.html"><abbr title="src/Request/Music.php">Music.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-musicgenre.html"><abbr title="src/Response/Model/MusicGenre.php">MusicGenre.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-musicgenreitem.html"><abbr title="src/Response/Model/MusicGenreItem.php">MusicGenreItem.php</abbr></a></li>
+                    <li><a href="../files/src-response-musicgenresresponse.html"><abbr title="src/Response/MusicGenresResponse.php">MusicGenresResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-musicitemsresponse.html"><abbr title="src/Response/MusicItemsResponse.php">MusicItemsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-musickeywordsearchresponse.html"><abbr title="src/Response/MusicKeywordSearchResponse.php">MusicKeywordSearchResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-mutedreelsresponse.html"><abbr title="src/Response/MutedReelsResponse.php">MutedReelsResponse.php</abbr></a></li>
@@ -688,8 +691,8 @@
                     <li><a href="../files/src-settings-storageinterface.html"><abbr title="src/Settings/StorageInterface.php">StorageInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-stories.html"><abbr title="src/Response/Model/Stories.php">Stories.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storiesnetego.html"><abbr title="src/Response/Model/StoriesNetego.php">StoriesNetego.php</abbr></a></li>
-                    <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
+                    <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-storyanswersresponse.html"><abbr title="src/Response/StoryAnswersResponse.php">StoryAnswersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storyappattribution.html"><abbr title="src/Response/Model/StoryAppAttribution.php">StoryAppAttribution.php</abbr></a></li>
                     <li><a href="../files/src-response-storycharitiesresponse.html"><abbr title="src/Response/StoryCharitiesResponse.php">StoryCharitiesResponse.php</abbr></a></li>
@@ -760,6 +763,7 @@
                     <li><a href="../files/src-response-model-thread.html"><abbr title="src/Response/Model/Thread.php">Thread.php</abbr></a></li>
                     <li><a href="../files/src-realtime-payload-threadaction.html"><abbr title="src/Realtime/Payload/ThreadAction.php">ThreadAction.php</abbr></a></li>
                     <li><a href="../files/src-realtime-payload-threadactivity.html"><abbr title="src/Realtime/Payload/ThreadActivity.php">ThreadActivity.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-threebyfouritem.html"><abbr title="src/Response/Model/ThreeByFourItem.php">ThreeByFourItem.php</abbr></a></li>
                     <li><a href="../files/src-exception-throttledexception.html"><abbr title="src/Exception/ThrottledException.php">ThrottledException.php</abbr></a></li>
                     <li><a href="../files/src-response-model-thumbnail.html"><abbr title="src/Response/Model/Thumbnail.php">Thumbnail.php</abbr></a></li>
                     <li><a href="../files/src-response-model-timerange.html"><abbr title="src/Response/Model/TimeRange.php">TimeRange.php</abbr></a></li>
