--- a/documentation/namespaces/instagramapi-response-model.html
+++ b/documentation/namespaces/instagramapi-response-model.html
@@ -610,6 +610,12 @@
                 <dd>SegmentationModels.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-Model-LoginButton.html"><abbr title="\InstagramAPI\Response\Model\LoginButton">LoginButton</abbr></a></dt>
                 <dd>LoginButton.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-MusicGenre.html"><abbr title="\InstagramAPI\Response\Model\MusicGenre">MusicGenre</abbr></a></dt>
+                <dd>Automatically maps JSON data onto PHP objects with virtual functions.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-MusicGenreItem.html"><abbr title="\InstagramAPI\Response\Model\MusicGenreItem">MusicGenreItem</abbr></a></dt>
+                <dd>Automatically maps JSON data onto PHP objects with virtual functions.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-ThreeByFourItem.html"><abbr title="\InstagramAPI\Response\Model\ThreeByFourItem">ThreeByFourItem</abbr></a></dt>
+                <dd>Automatically maps JSON data onto PHP objects with virtual functions.</dd>
             
                     </dl>
     
