--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -547,6 +547,8 @@
                 <dd>SegmentationModelsResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-HasInteropUpgradedResponse.html"><abbr title="\InstagramAPI\Response\HasInteropUpgradedResponse">HasInteropUpgradedResponse</abbr></a></dt>
                 <dd>HasInteropUpgradedResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-GetMusicGenresResponse.html"><abbr title="\InstagramAPI\Response\GetMusicGenresResponse">GetMusicGenresResponse</abbr></a></dt>
+                <dd>Core class for Instagram API responses.</dd>
             
                     </dl>
     
