--- a/documentation/classes/InstagramAPI-Response-Model-ChainingSuggestion.html
+++ b/documentation/classes/InstagramAPI-Response-Model-ChainingSuggestion.html
@@ -9992,6 +9992,8 @@
     &#039;linked_fb_info&#039; =&gt; &#039;&#039;,
     &#039;has_password&#039; =&gt; &#039;bool&#039;,
     &#039;gating&#039; =&gt; &#039;Gating&#039;,
+    &#039;fbid_v2&#039; =&gt; &#039;string&#039;,
+    &#039;page_id_for_new_suma_biz_account&#039; =&gt; &#039;string&#039;,
 ]</span>
     </code>
             
