--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -549,6 +549,8 @@
                 <dd>HasInteropUpgradedResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-GetMusicGenresResponse.html"><abbr title="\InstagramAPI\Response\GetMusicGenresResponse">GetMusicGenresResponse</abbr></a></dt>
                 <dd>Core class for Instagram API responses.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-LiveArchiveSettingsResponse.html"><abbr title="\InstagramAPI\Response\LiveArchiveSettingsResponse">LiveArchiveSettingsResponse</abbr></a></dt>
+                <dd>Core class for Instagram API responses.</dd>
             
                     </dl>
     
